# platanus-build-night-26-mx-hugoduar

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  build-night-project.json  conftest.py  docker-compose.yml  manage.py  pyproject.toml  skills-lock.json
.next/: trace  trace-build
docs/planning/: HACKATHON_MVP.md  PRD.md
noctua/: __init__.py  asgi.py  celery.py  cli.py  settings.py  urls.py  wsgi.py
noctua/core/: api.py  auth.py  cors.py  models.py  schemas.py
noctua/integrations/: composio.py
noctua/producers/: registry.py  stub.py
noctua/runner/: archive.py  budget.py  executor.py  llm.py  planner.py  tasks.py
noctua/sandbox/: manager.py  tasks.py
noctua/signals/: mock.py  router.py
noctua/tools/: base.py  bundled.py  fabricator.py  registry.py
noctua/whatsapp/: __init__.py  client.py  media.py  signature.py
tests/: test_cli.py  test_composio_cli.py
tests/core/: conftest.py  test_artifact_actions.py  test_auth.py  test_connection_model.py  test_connections_api.py  test_mission_api.py  test_mission_preflight.py  test_models.py  test_producer_api.py  test_signal_routing.py
tests/integrations/: test_composio_adapter.py  test_composio_client.py
tests/producers/: test_cad_producer.py  test_clinical_analysis_producer.py  test_diagnostic_producer.py  test_pr_creation.py  test_pr_producer.py  test_social_post_producer.py
tests/runner/: test_budget.py  test_celery_smoke.py  test_executor.py  test_executor_no_sandbox.py  test_external_tools_lane.py  test_lifecycle.py  test_llm_guard.py  test_needs_input.py  test_planner.py
tests/sandbox/: test_nested_sandbox.py  test_reaper.py  test_sandbox_boot.py  test_sandbox_exec.py  test_validation.py
tests/signals/: test_mock_router.py  test_router.py  test_webhook.py
tests/tools/: test_fabricator.py  test_registry.py  test_registry_composio.py
tests/whatsapp/: test_api.py  test_client.py  test_media.py  test_reply.py  test_router.py  test_signature.py
ui/: .env.local.example  components.json  package-lock.json  package.json
ui/app/: globals.css  layout.tsx
ui/components/: ArtifactActions.tsx  ArtifactApproval.tsx  ArtifactCard.tsx  ArtifactPreview.tsx  BudgetPanel.tsx  CadViewer.tsx  ConnectAnyToolkitForm.tsx  ConnectionRow.tsx  CreatePRButton.tsx  CreatePRPanel.tsx  GithubIcon.tsx  (+9 more)
(+86 files in other folders)
